--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
 <head>
-    <link rel="stylesheet" href="style2.css">
+  <style>
+  body { 
+  background: url(bgr.jpg) no-repeat center center fixed; 
+  background-size: cover;
+  }
+  h1{
+   
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:400%;
+   }
+   h2{
+	   color:blue;
+	font-size:400%;
+   
+   }
+   p2
+   {
+	color:red;
+	font-size:400%;
+   }
+    </style>
+  
 </head>
 
 <body>
+    
     <pre>
   <h1>
 __Ye_doruu_wish_u_khup_khup_jast_happy_birthday g__
@@ -30,9 +52,10 @@ __Ye_doruu_wish_u_khup_khup_jast_happy_birthday g__
   </pre>
     <pre>
  <h2>
- Kasay n g dyaych trr vegl hot
+ Kasay n g dyaych trr vegl kahi hot
  pn mala mahite tu ghetl hi nast
- Me pn tuza bhau ahe gift n dyaycha ksa basl!!
+ Karan mala mahite mazi bahin khup swabhimani ahe
+ Me pn tuza bhau ahe shevtii gift n dyaycha ksa basal!!
  Ata hyala gift trr nahi mnata yenar pn ek aathvan samaj...
  
  Hya sobat ek preomise pn ghe..
@@ -52,7 +75,7 @@ __Ye_doruu_wish_u_khup_khup_jast_happy_birthday g__
  Forever and ever...
  
  Ani hi aathvan ashi ahe ki..
- Jasa vel jail hi wadat jail aankhi sundar hot jail...
+ Jasa jasa vel jail wadat jail aankhi sundar hot jail...
  
  Bgh n ithun mage bagitl trr unknown hoto aapn
  Aani ata life imagine nahi hot tuzya shivay...
