--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <pre>
   <h1>
-__Ye_doruu_wish_u_khup_khup_jast_happy_birthday g__
+__Ye_doruu_wish_u_khup_khup_jast_happy_birthday_g__
 
  Dua har waqt rab se yahi mangenge
  Hamesha hasti khikhilati rahe meri behna...
@@ -41,7 +41,7 @@ __Ye_doruu_wish_u_khup_khup_jast_happy_birthday g__
  .
  .
  .   
- Tumhe ek baat batani thi...
+ Tumhe ek baat hai batanii...
 
  Tu hi to hai wajah 
  Mere muskurane ki..
@@ -53,6 +53,7 @@ __Ye_doruu_wish_u_khup_khup_jast_happy_birthday g__
     <pre>
  <h2>
  Kasay n g dyaych trr vegl kahi hot
+ Pahilach bday ahe tuza tu mazya life mdhe alya pasn..
  pn mala mahite tu ghetl hi nast
  Karan mala mahite mazi bahin khup swabhimani ahe
  Me pn tuza bhau ahe shevtii gift n dyaycha ksa basal!!
