--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   body { 
   background: url(bgr.jpg) no-repeat center center fixed; 
